--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Debabrata Auddya"
-  avatar           : "Auddya_Debabrata_03.jpg"
+  avatar           : "profile.jpg"
   bio              : "Biomechanics, Mathematical Modeling, Finite Element Method"
   location         : "Madison, WI"
   employer         : "University of Wisconsin-Madison"
@@ -100,13 +100,13 @@ author:
   instagram        :
   lastfm           :
   linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org//0000-0002-4813-5516"
   pinterest        :
   soundcloud       :
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/AuddyaDebabrata"
+  twitter          : "AuddyaDebabrata"
   vine             :
   weibo            :
   xing             :
