--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Debabrata Auddya"
-  avatar           : "profile.jpg"
+  avatar           : "Auddya_Debabrata_03.jpg"
   bio              : "Biomechanics, Mathematical Modeling, Finite Element Method"
   location         : "Madison, WI"
   employer         : "University of Wisconsin-Madison"
