--- a/_config.yml
+++ b/_config.yml
@@ -171,7 +171,7 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
+  awards:
     output: true
     permalink: /:collection/:path/
   publications:
