--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Debabrata Auddya"
+  name             : "Debabrata Auddya, Ph.D."
   avatar           : "Auddya_Debabrata_03.jpg"
   bio              : "Computational Biomechanics, Mathematical Modeling, Finite Element Method"
   location         : "Newark, Delaware, USA"
